--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 31 12:45:57 BRT 2020
-sdk.dir=C\:\\Users\\Tardio\\AppData\\Local\\Android\\Sdk
+#Mon May 25 18:37:14 BRT 2020
+sdk.dir=C\:\\Users\\bruno\\AppData\\Local\\Android\\Sdk
